@@ -4,7 +4,7 @@
       "Matt Sergeant <matt@sergeant.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.043, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "Dist::Zilla version 5.047, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "perl_5"
    ],
@@ -27,7 +27,6 @@
             "Test::CheckManifest" : "1.29",
             "Test::Kwalitee" : "1.22",
             "Test::More" : "0.88",
-            "Test::PAUSE::Permissions" : "0",
             "Test::Pod" : "1.41",
             "Test::Pod::Coverage" : "1.08",
             "Test::Pod::Spelling::CommonMistakes" : "1.000",
@@ -63,10 +62,10 @@
    "provides" : {
       "HTTP::GHTTP" : {
          "file" : "lib/HTTP/GHTTP.pm",
-         "version" : "1.081"
+         "version" : "1.080_004"
       }
    },
-   "release_status" : "stable",
+   "release_status" : "testing",
    "resources" : {
       "bugtracker" : {
          "web" : "https://github.com/genio/http-ghttp/issues"
@@ -78,7 +77,7 @@
          "web" : "https://github.com/genio/http-ghttp"
       }
    },
-   "version" : "1.081",
+   "version" : "1.080_004",
    "x_contributors" : [
       "Chase Whitener <capoeirab@cpan.org>"
    ],
