@@ -4,7 +4,7 @@ license             = Perl_5
 copyright_holder    = Matt Sergeant
 copyright_year      = 2000
 
-version = 1.081
+version = 1.080_004
 
 [Git::Contributors]
 
@@ -50,7 +50,7 @@ user    = genio
 [Test::ReportPrereqs]
 [Test::Version]
 
-[Test::PAUSE::Permissions]
+; [Test::PAUSE::Permissions]
 [Test::Pod::Coverage::Configurable]
 trustme = HTTP::GHTTP => qr/METHOD_|close|clean/;
 
