@@ -1,7 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-    -
+    - XS revert for testing issues
+    - Added a few extra simplistic tests
 
 1.080_003 2016-04-15
     - Fixed a minor POD issue
